Bug 691285 - gs hangs with "warning: ignoring zlib error: incorrect data check"
Summary: gs hangs with "warning: ignoring zlib error: incorrect data check"
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Interpreter (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Alex Cherepanov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-05 22:22 UTC by keinbiervorvier
Modified: 2010-05-08 16:57 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
corrupted figure which makes gs hang (42.65 KB, application/postscript)
2010-05-05 22:22 UTC, keinbiervorvier
Details
patch (976 bytes, patch)
2010-05-08 16:56 UTC, Alex Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description keinbiervorvier 2010-05-05 22:22:03 UTC
Created attachment 6260 [details]
corrupted figure which makes gs hang

this applies to current HEAD.

gs hangs with the warning

warning: ignoring zlib error: incorrect data check

at very high (99%) CPU utilization and never returns. The figure is likely corrupted, but more graceful error handling would be good.

Cheers
T.
Comment 1 Alex Cherepanov 2010-05-08 16:56:57 UTC
Created attachment 6269 [details]
patch

Detect and break an infinite loop when some of the image data source are
at EOF, some are not, and the image code doesn't take more data.

This patch has been committed as a rev. 11206.
Regression testing shows no differences.