Detect and break an infinite loop when some of the image data source are at EOF, some are not, and the image code doesn't take more data. Bug 691285.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11206 a1074d23-0009-0410-80fe-cf8c14f379e6